# GoldPulse

./: .dockerignore  .gitignore  docker-compose.yml  package-lock.json  package.json  stats.sh
.github/workflows/: ci.yml  pages.yml  publish-docker.yml
apps/mobile/: .env.example  App.tsx  env.d.ts  package.json
apps/mobile/src/: theme.ts
apps/mobile/src/hooks/: useQuoteWebSocket.ts
apps/mobile/src/screens/: TradingScreen.tsx
apps/web/: .env.example  Dockerfile  next.config.ts  package.json
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/dashboard/: page.tsx
apps/web/src/components/dashboard/: GoldChart.tsx  OrderPanel.tsx  PositionsPanel.tsx  PriceTicker.tsx  TradingDashboard.tsx
apps/web/src/hooks/: useQuoteWebSocket.ts
apps/web/src/lib/: candles.ts  env.ts
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/api/: deps.py
backend/app/api/routers/: __init__.py  quotes.py
backend/app/models/: __init__.py  price_history.py  trade_order.py  user.py  wallet.py
backend/app/schemas/: __init__.py  quote.py
backend/app/services/: quote_fetcher.py  quote_worker.py  ws_manager.py
docs/: DEPLOY.md
